-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.6, 5.12.7, 6.2, 6.4, 6.5.0 Beta3
-
-
26c2569b7 (dev), 3e7d903f4 (6.5), 9a8f29832 (6.4), 76a9b10dc (tqtc/lts-6.2), 0c6d4d574 (tqtc/lts-5.15)
-
2023wk06FOQtforAndroid, 2023wk08FOQtforAndroid
On android device, when you have any type of TextField and keyboard is shown once, after that if you force change the orientation of the device, you receive:
QMetaObject::invokeMethod: No such method QQuickRootItem::inputMethodQuery(Qt::InputMethodQuery,QVariant)
Same warning is received on every orientation change, forced from the device itself, but without problems.
The result is that main thread stucks, and app crashes. Any call of Qt.inputMethod.hide() or anything else from Qt.inputMethod is not helping at all.
If keyboard is not shown at all, app works just fine. If keyboard is shown through browser inside the app, again everything works fine.
100% reproducible on Android 8.0(Huawei Honor 8) - Microsoft Swift Keyboard